Bruk ident som parameter i stedet for personId
Kallende system vet potensielt ikke hva brukers personId er enda. Må bytte til POST for å hindre at indent havner i access/request-logger
